<resources>
    <string name="app_name">family-bank-app</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="family_bank">Family Bank</string>

    <string name="todo">TODO</string>
    <string name="new_account">new account</string>
    <string name="mary_sampson">Mary Sampson</string>
    <string name="logo">Logo</string>
    <string name="account_name">account_name</string>
    <string name="transaction_history">History</string>
    <string name="account_activity">AccountActivity</string>


    <string name="acc_create_name" comment="used in create account dialog">Account Name</string>
    <string name="acc_create_balance" comment="used in create account dialog">Account Balance</string>
    <string name="accounts">Accounts</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="test_1">test $1.0</string>
    <string name="deposit_hint">Enter Deposit Amount</string>
    <string name="withdraw_hint">Enter Withdraw Amount</string>
    <string name="depwith_memo_hint">Note</string>
    <string name="depwith_default_hint">Deposit Withdraw bad hint</string>
    <string name="balance">Balance</string>
    <string name="withdraw">Withdraw</string>
    <string name="deposit">Deposit</string>
    <string name="default_memo">DEFAULT MEMO</string>
    <string name="withdraw_test">WITHDRAW</string>
    <string name="deposit_test">DEPOSIT</string>
    <string name="current_bal">Current Bal</string>
    <string name="amount">Amount</string>
    <string name="datetime">datetime</string>
    <string name="confirm">Confirm</string>
    <string name="jerry_law">Jerry Law</string>
    <string name="back">Back</string>
    <string name="status">Status</string>

</resources>