<?xml version="1.0" encoding="utf-8"?>


<ScrollView
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/BankGreenBackground"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        >


        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:background="@color/BankGreen"
            android:id="@+id/toolbarTransactionsPage"
            >



            <ImageView
                android:layout_width="433dp"
                android:padding="10dp"
                android:layout_height="100dp"
                android:src="@drawable/logo"
                android:contentDescription="@string/logo" />



        </com.google.android.material.appbar.AppBarLayout>



        <TextView
            android:id="@+id/transactionActivityTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbarTransactionsPage"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:textSize="40sp"
            android:typeface="serif"
            android:text="@string/datetime" />

        <TextView
            android:id="@+id/transactionActivityAmt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbarTransactionsPage"
            android:paddingStart="20dp"
            android:layout_marginTop="100dp"
            android:textSize="20sp"
            android:typeface="serif"
            android:text="@string/amount" />

        <TextView
            android:id="@+id/transactionActivityBal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbarTransactionsPage"
            android:paddingStart="10dp"
            android:layout_marginTop="100dp"
            android:textSize="20sp"
            android:typeface="serif"
            android:layout_marginStart="220dp"
            android:text="@string/current_bal" />

        <View
            android:layout_marginTop="140dp"
            android:layout_below="@+id/toolbarTransactionsPage"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/BankGreen"/>

        <TextView
            android:id="@+id/transactionActivityMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbarTransactionsPage"
            android:padding="20dp"
            android:layout_marginTop="140dp"
            android:textSize="20sp"
            android:typeface="serif"
            android:text="Message" />


        <Button
            android:text="go back"
            android:layout_width="170dp"
            android:layout_height="@dimen/createAcct_height"
            android:layout_below="@+id/transactionActivityMessage"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/new_account"
            android:padding="0dp"
            android:background="@drawable/button_blank"
            android:onClick="toAccountActivity"
            />







    </RelativeLayout>
</ScrollView>